adding user authentication (#2)
* adding user authentication

* recognition service has been added

* Remove certs

* Update BaseService.js

changing user => result

* Update UserService.js

using this.schema

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/alya-mirror/asm-backend#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "cors": "^2.8.4",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^5.0.7"
   }
 }
