--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/alya-mirror/asm-backend#readme",
   "dependencies": {
+    "aws-iot-device-sdk": "^2.2.1",
     "bcrypt": "^1.0.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "socket.io": "^2.0.4",
+    "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
