--- a/data/approvedAddons.json
+++ b/data/approvedAddons.json
@@ -8,11 +8,11 @@
   {
     "name": "ASMyoutube",
     "description": "youtube addon for alya smart mirror",
-    "npm_name": "asm-youtube",
+    "npm_name": "@alya-mirror/asm-youtube-addon",
     "repo_git_url": "https://github.com/alya-mirror/asm-youtube-addon"
   },
   {
-    "name": "ASMyoutube",
+    "name": "ASMdateTime",
     "description": "A react component that shows date/time for alya-smart-mirror",
     "npm_name": "asm-date-time",
     "repo_git_url": "https://github.com/alya-mirror/asm-digital-clock-addon"
