--- a/data/approvedAddons.json
+++ b/data/approvedAddons.json
@@ -12,9 +12,9 @@
     "repo_git_url": "https://github.com/alya-mirror/asm-youtube-addon"
   },
   {
-    "name": "ASMdateTime",
+    "name": "asmDateTime",
     "description": "A react component that shows date/time for alya-smart-mirror",
-    "npm_name": "asm-date-time",
+    "npm_name": "@alya-mirror/asm-date-time",
     "repo_git_url": "https://github.com/alya-mirror/asm-digital-clock-addon"
   }
 ]
