adding the name to the change addon socket message

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -13,5 +13,5 @@
   },
   "positions":["w3-display-topleft","w3-display-topmiddle","w3-display-topright",
     "w3-display-left","w3-display-middle","w3-display-right",
-    "w3-display-bottomright","w3-display-bottommiddle","w3-display-bottomright"]
+    "w3-display-bottomleft","w3-display-bottommiddle","w3-display-bottomright"]
 }
